--- a/style.css
+++ b/style.css
@@ -58,8 +58,41 @@ a:hover {
   text-decoration-color: rgb(181, 181, 181);
 }
 
+.slider-btn{
+  margin-top: 1rem;
+  display: flex;
+  justify-content: center;
+
+}
+
+.logo-img{
+  height: 6rem;
+  /* width: 2rem; */
+  margin-right: 1rem;
+  /* border: 1px solid black; */
+}
+
+.category-button{
+  background-color: #fff;
+  border: 0px   ;
+  gap: 10rem;
+  padding: 0px 20px;
+  /* border-radius: 5px; */
+  font-size: 1.5rem;
+  /* font-weight: 600; */
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+.category-button:hover {
+  color: grey;
+  text-decoration: underline;
+  text-underline-offset: 1rem;
+  text-decoration-color: rgb(181, 181, 181);
+}
+
 .logo {
   font-size: 2rem;
+  /* font-weight: 600; */
 }
 
 .logo:hover {
@@ -193,6 +226,13 @@ section {
   font-size: 1.75rem;
   margin-bottom: 1rem;
 }
+
+/* #text{
+  color: rgb(85, 85, 85);
+  font-weight: 600;
+  font-size: 2rem;
+} */
+
 
 .title {
   font-size: 3rem;
@@ -336,16 +376,17 @@ section {
 .article-container {
   display: flex;
   text-align: initial;
-  flex-wrap: wrap;
   flex-direction: row;
+  flex-wrap: wrap;
   gap: 2.5rem;
   justify-content: space-around;
 }
 
+
 article {
   display: flex;
   width: 10rem;
-  justify-content: space-around;
+  /* justify-content: space-around; */
   gap: 0.5rem;
 }
 
